# mopidy-beets

./: .copier-answers.yml  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  release-doc.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml
mopidy_beets/: __init__.py  actor.py  client.py  ext.conf  library.py  translator.py
mopidy_beets/browsers/: __init__.py  albums.py
src/mopidy_beets/: __init__.py  actor.py  client.py  ext.conf  library.py  translator.py
src/mopidy_beets/browsers/: albums.py
tests/: __init__.py  helper_beets.py  test_beets_api.py  test_extension.py  test_library.py
tests/data/beets-rsrc/: README.md
