[project]
name = "mopidy-beets"
description = "Mopidy extension for playing music from a music collection managed via Beets"
readme = "README.md"
requires-python = ">= 3.13"
license = { text = "MIT" }
authors = [{ name = "Lars Kruse", email = "devel@sumpfralle.de" }]
classifiers = [
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dynamic = ["version"]
dependencies = [
    "mopidy >= 4.0.0a7",
    "pykka >= 4.1",
    "requests >= 2.32",
]

[project.urls]
Homepage = "https://github.com/mopidy/mopidy-beets"

[project.entry-points."mopidy.ext"]
beets = "mopidy_beets:Extension"


[build-system]
requires = ["setuptools >= 78", "setuptools-scm >= 8.2"]
build-backend = "setuptools.build_meta"


[dependency-groups]
dev = [
    "tox",
    { include-group = "ruff" },
    { include-group = "tests" },
    { include-group = "typing" },
]
ruff = ["ruff"]
tests = [
    # We need the `beets.test` module, which is not part of a release, yet (2024-01)
    "beets@git+https://github.com/beetbox/beets.git@master",
    "flask",
    "pytest",
    "pytest-cov",
    "responses",
    "werkzeug",
]
typing = ["pyright"]


[tool.coverage.paths]
source = ["src/", "*/site-packages/"]

[tool.coverage.run]
source_pkgs = ["mopidy_beets"]

[tool.coverage.report]
show_missing = true


[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
# Not all dependencies have type hints:
reportMissingTypeStubs = false
# Already covered by ruff's flake8-self checks:
reportPrivateImportUsage = false


[tool.pytest.ini_options]
filterwarnings = [
    # By default, fail tests on warnings from our own code
    "error:::mopidy_beets",
    #
    # Add any warnings you want to ignore here
]


[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Add rules you want to ignore here
    "ANN001", # missing-type-function-argument  # TODO
    "ANN002", # missing-type-args  # TODO
    "ANN003", # missing-type-kwargs  # TODO
    "ANN201", # missing-return-type-undocumented-public-function  # TODO
    "ANN202", # missing-return-type-private-function  # TODO
    "ANN204", # missing-return-type-special-method  # TODO
    "ANN205", # missing-return-type-static-method  # TODO
    "D",     # pydocstyle
    "D203",  # one-blank-line-before-class
    "D213",  # multi-line-summary-second-line
    "FIX002", # line-contains-todo  # TODO
    "G004",  # logging-f-string
    "TD002", # missing-todo-author
    "TD003", # missing-todo-link
    #
    # Conflicting with `ruff format`
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG",  # flake8-unused-arguments
    "D",    # pydocstyle
    "S101", # assert
]


[tool.setuptools.package-data]
"*" = ["*.conf"]


[tool.setuptools_scm]
# This section, even if empty, must be present for setuptools_scm to work


[tool.tox]
env_list = [
    "3.13",
    "3.14",
    "pyright",
    "ruff-check",
    "ruff-format",
]

[tool.tox.env_run_base]
package = "wheel"
wheel_build_env = ".pkg"
dependency_groups = ["tests"]
commands = [
    [
        "pytest",
        "--cov",
        "--basetemp={envtmpdir}",
        { replace = "posargs", extend = true },
    ],
]

[tool.tox.env.pyright]
dependency_groups = ["typing"]
commands = [["pyright", "{posargs:src}"]]

[tool.tox.env.ruff-check]
skip_install = true
dependency_groups = ["ruff"]
commands = [["ruff", "check", "{posargs:.}"]]

[tool.tox.env.ruff-format]
skip_install = true
dependency_groups = ["ruff"]
commands = [["ruff", "format", "--check", "--diff", "{posargs:.}"]]
